...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_attending"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_attending_selector"/>

                <TextView
                    android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_not_attending"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_not_attending_selector"/>

                <TextView
                    android:layout_width="wrap_content"
...
